fix(userlist): prevent online status wrapping to next line
issue #77

--- a/src/components/userList/UserList.module.scss
+++ b/src/components/userList/UserList.module.scss
@@ -40,6 +40,9 @@
 }
 
 .user {
+	width: 100%;
+	margin-right: 30px;
+
 	&::before {
 		// content: '‒';
 		margin-right: 4px;
